# minitor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  TODO.md  TODO_IMEDIATE  autogen.sh  cell.c  cell.h  configure  configure.ac  libtool  monitor  partitions.csv  run  sdkconfig  sdkconfig.old  test.c
components/minitor/: CMakeLists.txt  component.mk
components/minitor/h/: cell.h  circuit.h  consensus.h  constants.h  core.h  local_connection.h  minitor.h  onion_service.h  or_connection.h
components/minitor/include/: cell.h  circuit.h  config.h  minitor.h
components/wifi_connect/: CMakeLists.txt
components/wolfssl/: CMakeLists.txt
examples/: build_client  build_service  client_example.c  service_example.c
h/: cell.h  circuit.h  connections.h  consensus.h  constants.h  core.h  custom_sc.h  encoding.h  minitor.h  onion_client.h  onion_service.h  port.h  port_types.h  wolfssl_internal.h
h/models/: db.h  relay.h  revision_counter.h
h/structures/: cell.h  circuit.h  connections.h  consensus.h  onion_client.h  onion_message.h  onion_service.h
include/: config.h  minitor.h  minitor_client.h  minitor_service.h
include/test/: fd_tree.h
main/: component.mk  main.c
models/: relay.sql
src/: cell.c  circuit.c  config.c  connections.c  consensus.c  core.c  custom_sc.c  encoding.c  minitor.c  onion_client.c  onion_service.c  port.c
src/models/: db.c  issi.c  network_consensus.c  relay.c  revision_counter.c
src/structures/: cell.c  circuit.c  connections.c  consensus.c  onion_service.c
src/test/: fd_tree.c  issi.c
test/: test.js
(+52 files in other folders)
