noinst_LIBRARIES = libminitor.a
libminitor_a_SOURCES = \
src/cell.c \
src/circuit.c \
src/config.c \
src/connections.c \
src/consensus.c \
src/core.c \
src/encoding.c \
src/minitor.c \
src/onion_service.c \
src/port.c \
src/custom_sc.c \
src/structures/circuit.c \
src/structures/connections.c \
src/structures/consensus.c \
src/structures/onion_service.c \
src/models/relay.c \
src/models/revision_counter.c
libminitor_a_CFLAGS = -Werror-implicit-function-declaration
libminitor_a_LDFLAGS = -static
