lib_LTLIBRARIES = libminitor.la
libminitor_la_SOURCES = \
src/cell.c \
src/circuit.c \
src/config.c \
src/connections.c \
src/consensus.c \
src/core.c \
src/encoding.c \
src/minitor.c \
src/onion_service.c \
src/onion_client.c \
src/port.c \
src/custom_sc.c \
src/structures/circuit.c \
src/structures/connections.c \
src/structures/consensus.c \
src/structures/onion_service.c \
src/models/relay.c \
src/models/revision_counter.c
include_HEADERS = \
include/minitor.h \
include/minitor_client.h \
include/minitor_service.h
libminitor_la_CFLAGS = -Werror-implicit-function-declaration
#libminitor_la_LDFLAGS = -static
